--- a/custom/modules/crmData/mod.css
+++ b/custom/modules/crmData/mod.css
@@ -191,3 +191,22 @@
   }
 
 }
+
+.moduleCrmData .search label {
+  margin-bottom:0;
+  float:left;
+  clear:left;
+}
+.moduleCrmData .search select {
+  width:50px;
+  float:left;
+  margin-top:3px;
+  clear:left;
+  background-color:#fff;
+}
+.moduleCrmData .search input {
+  margin-bottom:5px;
+  height:20px;
+  width:110px !important;
+  float:left;
+}
