--- a/custom/themes/ehe-ini.de/css/standard.css
+++ b/custom/themes/ehe-ini.de/css/standard.css
@@ -15,6 +15,9 @@ div.branding img {
   margin-left:130px;
   margin-top:10px;
 }
+div.branding a.toggleMenu {
+  display:none;
+}
 img.decker {
   position:absolute;
   z-index:100;
@@ -251,4 +254,202 @@ ol.sitemap li {
   text-transform: uppercase;
   margin-bottom: 6px;
   font-weight: lighter;
+}
+
+@media only screen
+and (min-device-width: 320px)
+and (max-device-width: 640px)
+and (orientation: portrait) {
+
+  html, body {
+    font-size:16px !important;
+    line-height:24px !important;
+    text-size-adjust: none;
+    -webkit-text-size-adjust: none;
+    -moz-text-size-adjust: none;
+    -ms-text-size-adjust: none;
+  }
+
+  p, a, li {
+    font-size:1em !important;
+    line-height:1em !important;
+  }
+
+  div.wrapAll {
+    width: 100% !important;
+    background-image:none !important;
+  }
+  div.branding {
+    float:none !important;
+    width:100%;
+    text-align:center !important;
+  }
+  div.branding a {
+    float:none !important;
+    text-align:center !important;
+  }
+  div.branding a img {
+    margin:auto !important;
+  }
+  div.branding a.toggleMenu {
+    display:block !important;
+    position:absolute;
+    left:15px;
+    top:30px;
+  }
+  div.search {
+    float:none !important;
+    position:relative !important;
+    padding-top:20px !important;
+    right:auto !important;
+  }
+  div.gsc-control-cse {
+    width:100% !important;
+  }
+  ol.main {
+    margin:0 !important;
+    float:none !important;
+    width:100%;
+    display:none;
+  }
+  ol.main > li {
+    float:none !important;
+    margin:auto !important;
+    background:none !important;
+    width:100%;
+    text-align:center;
+    border-top:1px solid #4d4d4d;
+  }
+  ol.main > li:last-child {
+    border-bottom:1px solid #4d4d4d;
+  }
+  ol.main > li a {
+    font-size:2em !important;
+    padding:20px 10px 20px 10px !important;
+    text-align:center;
+    width:100%;
+    float:inherit !important;
+  }
+  ol.sub {
+    position:relative !important;
+    display:block !important;
+    width:100%;
+    top:0 !important;
+    padding-top:0 !important;
+  }
+  ol.sub li {
+    float:none !important;
+    margin:auto !important;
+    background:none !important;
+    width:100%;
+    text-align:center;
+    border-top:1px solid #4d4d4d;
+  }
+  ol.sub li a {
+    font-size:1.5em !important;
+    padding:20px 10px 20px 10px !important;
+    text-align:center;
+    width:100%;
+    float:none !important;
+  }
+  div.main {
+    width:100% !important;
+    margin-left:0 !important;
+    padding:20px 0 20px 0 !important;
+  }
+  div.main h1 {
+    font-size:3em;
+  }
+  div.main h1, div.main > a, div.main > div {
+    padding-left:10px;
+    padding-right:10px;
+  }
+  div.main a, div.main p, div.main li {
+    font-size:2em !important;
+    line-height:1.5em !important;
+  }
+  div.main p > a, div.main li > p {
+    font-size:1em !important;
+    line-height:1.5em !important;
+  }
+  div.main ul {
+    margin-left:10px;
+  }
+  div.main a.link {
+    background-image:none !important;
+  }
+  div.testimonial {
+    width:100% !important;
+  }
+  div.contact p {
+    height:auto !important;
+    padding-left:0 !important;
+    background:none !important;
+  }
+  ul.reports li {
+    width:100% !important;
+    float:none !important;
+  }
+  ul.reports li:last-child {
+    border-bottom:none !important;
+  }
+  ul.reports li p {
+    text-align:left !important;
+    padding-right:10px;
+  }
+  ul.reports li span {
+    font-size:1em !important;
+    line-height:1em !important;
+    padding-right:10px;
+    padding-top:10px;
+  }
+  div.event {
+    width:100% !important;
+    float:none !important;
+  }
+  div.event h3 {
+    font-size:1.5em;
+    line-height:50px !important;
+    background-position: 95% baseline !important;
+  }
+  div.footer {
+    background-image:none !important;
+    background-color:#ffc66c;
+    height:auto !important;
+  }
+  div.footer p {
+    font-size:2em !important;
+    line-height:1.5em !important;
+    height:auto !important;
+    line-height:80px;
+  }
+  ol.footer {
+    position:relative !important;
+    margin:0 !important;
+    float:none !important;
+    width:100%;
+    top:0 !important;;
+    right:0 !important;
+  }
+  ol.footer > li {
+    float:none !important;
+    margin:auto !important;
+    background:none !important;
+    width:100%;
+    text-align:center;
+    border-top:1px solid #fff;
+  }
+  ol.footer > li a {
+    float:none !important;
+    font-size:2em !important;
+    vertical-align:middle;
+    display:block;
+    padding-top:15px;
+    padding-bottom:15px;
+  }
+  ol.socialMedia {
+    top:10px !important;
+    left:100px !important;
+  }
+
 }
