--- a/custom/themes/ehe-ini.de/css/standard.css
+++ b/custom/themes/ehe-ini.de/css/standard.css
@@ -260,6 +260,9 @@ ol.sitemap li {
 and (min-device-width: 320px)
 and (max-device-width: 640px),
 screen
+and (min-device-width: 360px)
+and (max-device-width: 640px),
+screen
 and (min-device-width: 320px)
 and (max-device-width: 568px),
 screen
@@ -272,11 +275,23 @@ screen
 and (min-device-width: 375px)
 and (max-device-width: 812px),
 screen
+and (min-device-width: 480px)
+and (max-device-width: 800px),
+screen
+and (min-device-width: 601px)
+and (max-device-width: 906px),
+screen
 and (min-device-width: 768px)
 and (max-device-width: 1024px),
 screen
+and (min-device-width: 800px)
+and (max-device-width: 1280px),
+screen
 and (min-device-width: 834px)
 and (max-device-width: 1112px),
+screen
+and (min-device-width: 1536px)
+and (max-device-width: 2048px),
 screen
 and (min-device-width: 834px)
 and (max-device-width: 834px)
