--- a/custom/themes/ehe-ini.de/css/standard.css
+++ b/custom/themes/ehe-ini.de/css/standard.css
@@ -564,6 +564,14 @@ and (orientation: landscape)
     width:100% !important;
     font-weight:normal !important;
   }
+  div.eventImage {
+    margin-top:30px !important;
+  }
+  div.eventImage a.download {
+    background-image:none !important;
+    padding-left:0 !important;
+    width:auto !important;
+  }
   form fieldset {
     width:30% !important;
   }
