--- a/custom/themes/ehe-ini.de/css/standard.css
+++ b/custom/themes/ehe-ini.de/css/standard.css
@@ -81,6 +81,8 @@ h1 {
   font-size:20px;
   font-weight:lighter;
   margin-bottom:30px;
+  position:absolute;
+  left:-10000px;
 }
 div.main div.p p {
   padding-top:20px;
